Fixed overflow-x

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,7 +9,7 @@ html, body {
   color: $white;
   font-family: 'Lato', sans-serif;
   font-size: 24px;
-  //overflow: hidden;
+  overflow-x: hidden;
   background-color: $black;
 }
 
